[package]
name = "logitech-cve"
version = "1.4.2"
edition = "2024"
description = "A Rust library for interacting with Logitech virtual driver."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BatogiX/logitech-cve"
homepage = "https://github.com/BatogiX/logitech-cve"
documentation = "https://docs.rs/logitech-cve"
keywords = ["logitech", "rust", "windows", "library"]
categories = ["os::windows-apis", "api-bindings"]
readme = "README.md"

[dependencies]
windows-sys = { version = "0.60.2", default-features = false, features = [
    'Wdk_Foundation',
    'Wdk_Storage_FileSystem',
    'Wdk_System_IO',
    "Wdk_System_SystemServices",
    'Win32_Foundation',
    'Win32_Security',
    'Win32_Storage_FileSystem',
    'Win32_System_IO',
    'Win32_System_WindowsProgramming',
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
windows-sys = { version = "0.60.2", default-features = false, features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }
